Issue #2239189 by johnv: Fixed Anonymous author cannot set a state for new content.
Issue #2019345 by johnv: Removed workflownode.inc into workflownode.module.
Issue #2164081 by johnv: Some nervous code reshuffling regarding unpublished nodes.
Issue #2237361 by johnv: Fixed SQL error in node_access when Anonymous Author has workflow_access rights.
Issue #2240009 by johnv: Changed some code in workflow.tokens.inc, to prepare for multiple workflows per entity.
Issue #2019345 by johnv: Changed WorkflowState to an Entity, too.
Issue #2019345 by johnv: Added method getWorkflow() to WorkflowTransition class.
Issue #2241577 by johnv: Fixed export/import Features after making WorkflowState an entity.
Issue #2164081 by johnv: Removed code that hides Workflow Form on unpublished nodes.
Issue #2241577 by johnv: Removed dependency on Features module. Now you can enable a workflow feature without!
Issue #2217291: Added new view + view_mode 'history_tab', to create customizable tab, for multiple workflows.
Issue #0443094: Fixed typo in workflow_admin_paths_alter().
Issue #2241577 by preddy: Added check for existing workflow in WorkflowConfigTransition::save().
Issue #2243569: Added inline documentation for usage of workflow_get_workflows_by_type with multiple workflows per node type.
Issue #2243997: Added refreshed default views in workflow_views under /workflow/ path.
Issue #2217291: Fixed workflow_views for installations with D7<7.22.
Issue #2240009: Moved current tokens to submodule 'workflownode' to prepare for workflow_field tokens.
Issue #2240009: Added better readable 'chained' tokens, re-using tokens of core objects.
Issue #2237125: Removed token 'workflow-state-age' from workflow_extensions, since it is now available as a chained token.
Issue #2240009: Removed dpm().
Issue #2226781: Fixed error on type_map admin page for PHP5.4
Issue #2226781: Fixed warnings for PHP5.4 using reset().