@@ -508,3 +508,4 @@ Issue #2237125: Removed token 'workflow-state-age' from workflow_extensions, sin
 Issue #2240009: Removed dpm().
 Issue #2226781: Fixed error on type_map admin page for PHP5.4
 Issue #2226781: Fixed warnings for PHP5.4 using reset().
+Issue #2241577: Added machine_name to Workflow, influencing features.
